<resources>
    <string name="app_name">Marinepunk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="code">code</string>
    <string name="create">Create</string>
    <string name="connect">Connect</string>
    <string name="generate">Generate</string>
    <string name="copy">Copy</string>
    <string name="show_qr_code">qr create</string>
    <string name="close">Close</string>
    <string name="qr_connect">qr connect</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_account">Account</string>
    <string name="choose_file">Choose file</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="name_hint">nickname</string>
    <string name="logout">Log out</string>
    <string name="menu_to_game">Game</string>
</resources>